--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,16 @@
   </head>
 
   <body>
-    <%= flash_messages %>
+    <nav>
+      <%= link_to 'Museums', museums_path %>
+      <%= link_to 'Reviews', reviews_path %>
+      <% if not user_signed_in? %>
+        <%= link_to 'Sign In', new_user_session_path %>
+        <%= link_to 'Sign Up', new_user_registration_path %>
+      <% else %>
+        <%= button_to "Sign Out", destroy_user_session_path, {method: 'delete'} %>
+      <% end %>
+    </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
