revise museum create action / add create new museum to museums index

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -1,4 +1,6 @@
-<h1>All Museums</h1>
+<h1>Click on a museum to read reviews or write your own.  Or scroll down to add a new museum.</h1>
 <% @museums.each do |museum| %>
     <p><%= link_to "#{museum.name} #{museum.location}", museum_path(museum) %></p>
 <% end %>
+<h1>Create new museum</h1>
+    <%= link_to 'New Museum', new_museum_path %>
