revise new and create actions in reviews controller / change rating to number field on new reviews form

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -22,7 +22,7 @@
     </p>
     <p>
     <%= f.label :rating %>
-    <%= f.text_field :rating %>
+    <%= f.number_field :rating %>
     </p>
     <%= f.submit %>
 <% end %>
