--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Click on a museum to read reviews or write your own.  Or scroll down to add a new museum.</h1>
+<h1>Welcome to Museum Reviewer</h1>
+<h2>Click on a museum to read reviews or write your own.  Or scroll down to add a new museum.</h2>
 <% @museums.each do |museum| %>
     <p><%= link_to "#{museum.name} #{museum.location}", museum_path(museum) %></p>
 <% end %>
-<h1>Create new museum</h1>
+<h2>Create new museum</h2>
     <%= link_to 'New Museum', new_museum_path %>
