--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -9,4 +9,8 @@
 <p>
 <%= link_to "New Review", new_museum_review_path(@museum) %>
 </p>
+<p>
+<%= link_to "Edit Museum", edit_museum_path(@museum) %>
+<p>
 <%= link_to("Delete Museum", museum_path(@museum), data: {method: :delete, confirm: "Are you sure you want to delete this museum?"}) %>
+</p>
