--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
 
   <body>
     <nav>
-      <%= link_to 'Museums', museums_path %>
-      <%= link_to 'Reviews', reviews_path %>
+      <%= button_to 'Museums', museums_path %>
+      <%= button_to 'Reviews', reviews_path %>
       <% if not user_signed_in? %>
-        <%= link_to 'Sign In', new_user_session_path %>
+        <%= button_to 'Sign In', new_user_session_path %>
         <%= link_to 'Sign Up', new_user_registration_path %>
       <% else %>
         <%= button_to "Sign Out", destroy_user_session_path, {method: 'delete'} %>
