--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -10,20 +10,20 @@
 <p>Reviews:</p>
 <% @museum.reviews.each do |review| %>
         <ul>
-            <li> <%= review.date_visited %></li>
-            <li> <%= review.content %></li>
-            <li> <%= review.rating %></li>
+            <li>Date of Visit: <%= review.date_visited %></li>
+            <li>Review: <%= review.content %></li>
+            <li>Rating: <%= review.rating %></li>
         </ul>
     <% if review.user == current_user %>
-        <%= link_to "Edit Review", edit_museum_review_path(@museum) %>
+        <%= link_to "Edit Review", edit_review_path(review) %>
+        <%= link_to "Delete Review", review_path(review), data: {method: :delete, confirm: "Are you sure you want to delete this review?"} %>
     <% end %>
 <% end %>
 <p>
 <%= link_to "New Review", new_museum_review_path(@museum) %>
 </p>
-<p>
-<%= link_to "Edit Museum", edit_museum_path(@museum) %>
-</p>
-<p>
-<%= link_to("Delete Museum", museum_path(@museum), data: {method: :delete, confirm: "Are you sure you want to delete this museum?"}) %>
-</p>
+<% if @museum.user == current_user %>
+    <%= link_to "Back", museums_path %>
+    <%= link_to "Edit Museum", edit_museum_path(@museum) %>
+    <%= link_to("Delete Museum", museum_path(@museum), data: {method: :delete, confirm: "Are you sure you want to delete this museum?"}) %>
+<% end %>
