--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <%= link_to 'Sign Up', new_user_registration_path %>
         <%= link_to "Sign in with Github", user_github_omniauth_authorize_path %>
       <% else %>
-        <%= button_to "Sign Out", destroy_user_session_path, {method: 'delete'} %>
+        <%= link_to "Sign Out", destroy_user_session_path, {method: 'delete'} %>
       <% end %>
     </nav>
     <p class="notice"><%= notice %></p>
