--- a/app/views/museums/new.html.erb
+++ b/app/views/museums/new.html.erb
@@ -1,4 +1,20 @@
+<% if @museum.errors.any? %>
+<div id="error_explanation">
+    <h2>
+        <%= pluralize(@museum.errors.count, "error") %>
+        prohibited this museum from being saved:
+    </h2>
+
+    <ul>
+        <% @museum.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+    </ul>
+</div>
+<% end %>
+
 <%= form_for @museum do |f| %>
+    <%= f.hidden_field :user_id %>
     <p>
     <%= f.label :name %>
     <%= f.text_field :name %>
