--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -24,3 +24,5 @@
 <p>
 <%= link_to "New Review", new_museum_review_path(@museum) %>
 </p>
+
+<%= link_to("Delete Museum", museum_path(@museum), data: {method: :delete, confirm: "Are you sure you want to delete this museum?"}) %>
