correct authorize museum method in museum controller / add authorize review method to reviews controller and reviews before action / change error display to render errors partial form on new museum form / add errors partial render to museum show view and delete standalone delete link

--- a/app/views/museums/new.html.erb
+++ b/app/views/museums/new.html.erb
@@ -1,17 +1,4 @@
-<% if @museum.errors.any? %>
-<div id="error_explanation">
-    <h2>
-        <%= pluralize(@museum.errors.count, "error") %>
-        prohibited this museum from being saved:
-    </h2>
-
-    <ul>
-        <% @museum.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-    </ul>
-</div>
-<% end %>
+<%= render partial: "errors", locals: {museum: @museum} %>
 
 <%= form_for @museum do |f| %>
     <%= f.hidden_field :user_id %>
