--- a/app/views/museums/edit.html.erb
+++ b/app/views/museums/edit.html.erb
@@ -1,12 +1,12 @@
 <% if @museum.errors.any? %>
 <div id="error_explanation">
     <h2>
-        <%= pluralize(museum.errors.count, "error") %>
+        <%= pluralize(@museum.errors.count, "error") %>
         prohibited this museum from being saved:
     </h2>
 
     <ul>
-        <% museum.errors.full_messages.each do |msg| %>
+        <% @museum.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
         <% end %>
     </ul>
