add reviews index route to museum index view / delete back link to from museum show view / revise reviews index view / refactor new review view to render partials

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -5,3 +5,5 @@
     <% end %>
 <h2>Create new museum</h2>
     <%= link_to 'New Museum', new_museum_path %>
+<h2>See all reviews</h2>
+    <%= link_to 'All Reviews', reviews_path %>
