delete open lines on museum new view / revise h1 to h2 on museum name on museum show view / revise reviews index to include All Reviews title and review column name labels

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,6 +1,9 @@
+<h1>All Reviews</h1>
 <% @reviews.each do |review| %>
     <div>
     <h2><%= link_to review.museum.name, museum_reviews_path(review.museum) %></h2>
-    <h3><%= review.content %></h3>
+    <h3>Date of visit: <%= review.date_visited %></h3>
+    <h3>Review: <%= review.content %></h3>
+    <h3>Rating: <%= review.rating %></h3>
     </div>
 <% end %>
