Add search bar feature to museum index view and action

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -5,5 +5,11 @@
     <% end %>
 <h2>Create new museum</h2>
     <%= link_to 'New Museum', new_museum_path %>
+<h2>Search for a museum</h2>
+    <%= form_tag(museums_path, method: :get) do %>
+        Museum <%= text_field_tag :search %>
+        <%= submit_tag 'Search' %>
+    <% end %>
+
 <h2>See all reviews</h2>
     <%= link_to 'All Reviews', reviews_path %>
