edit readme / add body and ul elements to css / delete body element from museums.scss / delete x from flash messages output

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    background-color: lightblue;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 5%;
+}
+
+ul {
+    list-style-type:square;
+    list-style-position: outside;
+}
